--- a/pages/p6/main.css
+++ b/pages/p6/main.css
@@ -44,6 +44,7 @@ body{
     font-size: 14px;
     letter-spacing: 0;
     line-height: 24px;
+    text-shadow: 0 0 5px gray;
   }
   
  .button {
@@ -72,7 +73,7 @@ body{
     width: 30px;
     height: 30px;
     top: 921px;
-    left: 1452px;
+    left: 1430px;
     font-family: "BIZ UDPMincho", serif;
     font-style: normal;
     font-weight: 400;
