--- a/pages/p3/main.css
+++ b/pages/p3/main.css
@@ -77,6 +77,7 @@ body{
     font-size: 12px;
     letter-spacing: 0;
     line-height: 27px;
+    text-shadow: 0 0 5px white;
 }
 
 .next {
@@ -84,7 +85,7 @@ body{
     width: 30px;
     height: 30px;
     top: 921px;
-    left: 30px;
+    left: 90px;
     font-family: "BIZ UDPMincho", serif;
     font-style: normal;
     color: #ffffff;
