--- a/pages/p8/main.css
+++ b/pages/p8/main.css
@@ -74,6 +74,12 @@ body{
     color: white;
  }
 
+ .p:hover, .text-wrapper:hover {
+    
+    text-shadow: 0 0 8px white;
+    color: #F4AF28;;
+}
+
   .background {
     width: 100vw;
     height: 100vh;
@@ -116,7 +122,7 @@ body{
     animation-duration: 13.2s;
     animation-delay: -15.6s;
     transform-origin: 14vw 17vh;
-    box-shadow: 40vmin 0 10.2115006212vmin rgba(244, 175, 40, 0.2);
+    box-shadow: 40vmin 0 10.2115006212vmin rgba(244, 175, 40, 0.3);
   }
 
   .background span:nth-child(3) {
@@ -126,7 +132,7 @@ body{
     animation-duration: 14.8s;
     animation-delay: -3.5s;
     transform-origin: -18vw 9vh;
-    box-shadow: -40vmin 0 12.3544421218vmin rgba(244, 175, 40, 0.2);
+    box-shadow: -40vmin 0 12.3544421218vmin rgba(244, 175, 40, 0.3);
   }
 
   .background span:nth-child(4) {
@@ -136,7 +142,7 @@ body{
     animation-duration: 15.4s;
     animation-delay: -2.6s;
     transform-origin: 21vw 14vh;
-    box-shadow: -40vmin 0 5.9226682716vmin rgba(244, 175, 40, 0.2);
+    box-shadow: -40vmin 0 5.9226682716vmin rgba(244, 175, 40, 0.3);
   }
 
   .background span:nth-child(5) {
@@ -146,7 +152,7 @@ body{
     animation-duration: 15.3s;
     animation-delay: -6s;
     transform-origin: 9vw -23vh;
-    box-shadow: 40vmin 0 5.4289289226vmin rgba(196, 106, 8, 0.2);
+    box-shadow: 40vmin 0 5.4289289226vmin rgba(196, 106, 8, 0.3);
   }
 
   .background span:nth-child(6) {
@@ -156,7 +162,7 @@ body{
     animation-duration: 11.2s;
     animation-delay: -6.6s;
     transform-origin: -3vw 23vh;
-    box-shadow: -40vmin 0 14.4480182393vmin rgba(244, 175, 40, 0.2);
+    box-shadow: -40vmin 0 14.4480182393vmin rgba(244, 175, 40, 0.3);
   }
 
 
