--- a/pages/p8/main.css
+++ b/pages/p8/main.css
@@ -77,7 +77,7 @@ body{
  .p:hover, .text-wrapper:hover {
     
     text-shadow: 0 0 8px white;
-    color: #F4AF28;;
+    color: #F4AF28;/;
 }
 
   .background {
