--- a/mediatunnel/main.css
+++ b/mediatunnel/main.css
@@ -24,7 +24,6 @@ body {
     margin-left: 12vw;
     margin-top: 30vh;
     position: relative;
-    z-index: 1;
     font-family: "lores-12", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -37,7 +36,6 @@ body {
     margin-left: 40vw;
     margin-top: 48vh;
     position: relative;
-    z-index: 1;
     font-family: "lores-12", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -50,7 +48,6 @@ body {
     text-align: center;
     margin-top: 70vh;
     position: relative;
-    z-index: 1;
     font-family: "lores-12", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -82,7 +79,7 @@ body {
     font-style: normal;
     padding: 0.75rem;
     border-radius: 10rem;
-    background: transparent
+    background: transparent;
 }
 
 #Show:hover {
