--- a/pages/p4/main.css
+++ b/pages/p4/main.css
@@ -40,8 +40,8 @@ body {
     border: 1px solid;
     border-color: #000000;
     transform: rotate(-180deg);
-    filter: blur(250px);
-    opacity: 0.8;
+    filter: blur(200px);
+    opacity: 1;
   }
   
 .rec1 {
@@ -50,6 +50,13 @@ body {
     height: 653px;
     top: 320px;
     left: 398px;
+    animation: spin 2s ease-in-out;
+  }
+
+  @keyframes spin {
+    to {
+      transform: rotateY(360deg);
+    }
   }
   
 .rec2 {
@@ -59,20 +66,22 @@ body {
     top: 317px;
     left: 486px;
     opacity: 0.3;
-    transition: opacity 0.4s ease; 
+    transition: opacity 1s ease; 
+    transition: transform 0.8s ease; 
+    transform-origin: top center; 
 }
 
 .rec2:hover {
-    opacity: 0.9; 
+    opacity: 0.95; 
+    transform: scaleY(1.2); 
 }
-
 
 .p1 {
     position: absolute;
     width: 325px;
     top: 186px;
     left: 663px;
-    -webkit-text-stroke: 0.12px #000000;
+    -webkit-text-stroke: 0.3px #000000;
     font-family: "BIZ UDPMincho", serif;
     font-style: normal;
     font-weight: 600;
@@ -87,7 +96,7 @@ body {
     width: 692px;
     top: 697px;
     left: 663px;
-    -webkit-text-stroke: 0.12px #000000;
+    -webkit-text-stroke: 0.3px #000000;
     font-family: "BIZ UDPMincho", serif;
     font-style: normal;
     font-weight: 600;
@@ -102,7 +111,7 @@ body {
     width: 320px;
     top: 301px;
     left: 1055px;
-    -webkit-text-stroke: 0.12px #000000;
+    -webkit-text-stroke: 0.3px #000000;
     font-family: "BIZ UDPMincho", serif;
     font-style: normal;
     font-weight: 600;
@@ -116,8 +125,8 @@ body {
     position: absolute;
     width: 30px;
     height: 30px;
-    top: 29px;
-    left: 1430px;
+    top: 80px;
+    left: 1410px;
     font-family: "BIZ UDPMincho", serif;
     font-style: normal;
     font-weight: 400;
@@ -134,8 +143,13 @@ a {
     color: black;
 }
 
+.p1, .p2, .p3 {
+    text-shadow: none;
+    transition: text-shadow 0.8s ease; 
+}
+
 .p1:hover, .p2:hover, .p3:hover {
-    text-shadow: 6px 0px #C2C2C2
-    ;
+    text-shadow: 25px 5px 3px #848484;
+  
 }
   
