--- a/miku/main.css
+++ b/miku/main.css
@@ -15,6 +15,7 @@ h1 {
     font-size: 60px;
     margin-left: 800px;
     margin-top: 20px; 
+    margin-bottom: 0px;
 }
 
 img {
@@ -22,7 +23,18 @@ img {
 }
 
 a {
-    font-size: 40px;
-    margin-bottom: 50px;
-  
+    font-size: 45px;
+    margin-top: -30px;
+    margin-left: 1150px;
+    color: white;
+    text-decoration: none;
+    font-family: "nasalization", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #267E78;
+    text-shadow:
+    -3px -3px 0 #fff,  
+     3px -3px 0 #fff,
+    -3px  3px 0 #fff,
+     3px  3px 0 #fff; 
 }
