--- a/miku/outfit/main.css
+++ b/miku/outfit/main.css
@@ -15,17 +15,15 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 50%;
+    width: 50%; 
+    position: fixed;
+    top: 0;
+    left: 50%; 
+    transform: translateX(-50%); 
+    z-index: 1;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    position: fixed;
-    text-align: center;
-    top: 0; 
-    z-index: 1; 
-    left: 50%;
-    transform: translateX(-50%); 
-    
-  }
+}
 
   h2 {
     font-family: "magistral", sans-serif;
@@ -38,6 +36,7 @@ body {
     padding: 10px 10px;
     border-radius: 50px;
     padding: 0.5rem;
+    margin: 0 0.2rem; 
  
     border-color: #39c5bb;
     cursor: pointer;
@@ -88,7 +87,13 @@ body {
   }
 
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 768px) {
+
+    .tags {
+        width: 90%; 
+        justify-content: center;
+    }
+
     .content {
         flex-direction: column; 
         
