--- a/miku/outfit/main.css
+++ b/miku/outfit/main.css
@@ -66,7 +66,8 @@ body {
   
   .controls {
     position: fixed; 
-    bottom: 20px; 
+    bottom: 0;
+    margin-bottom: 1rem;
     left: 50%; 
     transform: translateX(-50%); 
     text-align: center;
@@ -89,28 +90,33 @@ body {
 
   @media screen and (max-width: 768px) {
 
-    .tags {
-        width: 90%; 
-        justify-content: center;
+    .tags {  
+        position: static; 
+        width: 100%;
+        justify-content: center; 
+        margin: 0 auto; 
+        text-align: center; 
+        margin-left: 50%;
     }
 
-    .content {
-        flex-direction: column; 
-        
+    .info {
+        margin-top: -0.5rem;
     }
 
 
     .controls {
-        position: static; 
-        margin-top: 20px; 
+        position: static;
+        margin-top: 4rem;
+        margin-bottom: 1.5rem;
+        bottom: 0;
         transform: none;
-        margin-bottom: 1rem;
-        
+        text-align: center;
+        width: 100%;
     }
 
-    img {
-        margin-top: -10%;
-    }
 
+    .content {
+        flex-direction: column; 
+    }
  }
 
