--- a/miku/outfit/main.css
+++ b/miku/outfit/main.css
@@ -56,12 +56,16 @@ body {
   
   .info {
     flex: 1;
-    text-align: left;
+    text-align: center;
     font-family: "magistral", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 20px;
     letter-spacing: 0.5px;
+    line-height: 2rem;
+    padding-left: 2rem;
+    max-width: 50%;
+
   }
   
   .controls {
@@ -92,7 +96,7 @@ body {
 
     .tags {  
         position: static; 
-        width: 100%;
+        width: 90%;
         justify-content: center; 
         margin: 0 auto; 
         text-align: center; 
@@ -101,8 +105,9 @@ body {
 
     .info {
         margin-top: -0.5rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
     }
-
 
     .controls {
         position: static;
@@ -113,7 +118,6 @@ body {
         text-align: center;
         width: 100%;
     }
-
 
     .content {
         flex-direction: column; 
