--- a/miku/outfit/main.css
+++ b/miku/outfit/main.css
@@ -79,8 +79,16 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    
   }
   
+  .content img { 
+    transition: 0.3s;
+  }
+.content:hover img {
+    transform: scale(1.07); 
+}
+
   .info {
     flex: 1;
     text-align: center;
