--- a/miku/main.css
+++ b/miku/main.css
@@ -26,16 +26,17 @@ body {
 }
 
 h1 {
-    color: #267E78;
+    animation: bounce 1s infinite; 
+    color: #216E6E;
     text-shadow:
-    -3px -3px 0 #fff,  
-     3px -3px 0 #fff,
-    -3px  3px 0 #fff,
-     3px  3px 0 #fff; 
+        -3px -3px 0 white,
+         3px -3px 0 white,
+        -3px  3px 0 white,
+         3px  3px 0 white; 
     font-family: "nasalization", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 60px;
+    font-size: 65px;
 }
 
 img {
@@ -45,15 +46,25 @@ img {
 }
 
 a {
-    font-size: 45px;
-
+    font-size: 50px;
     text-decoration: none;
     font-family: "nasalization", sans-serif;
     font-weight: 400;
     font-style: normal;
-    color: #267E78;
-     
+    color: white; 
+    text-shadow:
+    -4px -4px 0 #267E78,  
+     4px -4px 0 #267E78,
+    -4px  4px 0 #267E78,
+     4px  4px 0 #267E78; 
     padding: 0.5rem;
+    transition: 0.2s;
+}
+
+a:hover {
+    background-color: #267E78;
+    border-radius: 100px;
+    padding: 10px 20px 20px 20px;
 }
 
 .aboutbtn {
@@ -63,7 +74,6 @@ a {
     font-style: normal;
     color: #267E78;
     background-color: transparent;
- 
     padding: 1rem; 
     border: 2px solid #267E78; 
     border-radius: 50px; 
@@ -75,13 +85,10 @@ a {
 }
 
 .aboutbtn:hover {
-    background-color: #73D4D4;
+    background-color: #53CACA;
     color: white;
-    
-
 }
 
-/* 弹窗样式 */
 .modal {
     display: none;
     position: fixed;
@@ -91,9 +98,8 @@ a {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    padding-top: 20%; /* 控制弹窗与页面顶部的距离 */
+    padding-top: 20%;  
 }
-
 
 .modalcontent {
     color: #267E78;
@@ -112,7 +118,6 @@ a {
     word-spacing: 1.5px;  
 }
 
-
 .close {
     color: #267E78;
     float: right;
@@ -123,4 +128,13 @@ a {
     font-style: normal;
     font-size: 1.5rem;
     cursor: pointer;
+}
+
+@keyframes bounce {
+    0%, 100% {
+        transform: translateY(0); 
+    }
+    50% {
+        transform: translateY(-25px); 
+    }
 }
