--- a/miku/outfit/main.css
+++ b/miku/outfit/main.css
@@ -3,7 +3,12 @@ body {
     margin: 0;
     padding: 0;
   }
-  
+
+body {
+    opacity: 0;
+    transition: opacity 1.5s ease-in; 
+  }
+
   .container {
     max-width: 1050px;
     margin: 0 auto;
