--- a/findcocktail/result.css
+++ b/findcocktail/result.css
@@ -208,6 +208,55 @@ span {
     transition: opacity 1.5s ease; 
 }
 
+.refresh-button-container {
+    position: absolute;
+    bottom: 25px; 
+    right: 25px; 
+    display: flex; 
+    align-items: center;
+    cursor: pointer; 
+    text-decoration: none;
+    background-color: transparent;
+}
+
+.refresh-circle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px; 
+    background-color: transparent;
+    border: 2px solid #216583;
+    border-radius: 50%; 
+    transition: all 0.2s ease; 
+    background-color: transparent;
+}
+
+.refresh-text {
+    margin-right: 12px; 
+    display: none; 
+    background-color: transparent;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 1.8;
+    letter-spacing: 0.2px;
+    font-family: "scrivano", serif;
+    font-weight: 900;
+    font-style: italic;
+    background-color: transparent;
+    color:#216583;
+    transition: all 0.2s ease; 
+}
+
+.refresh-button-container:hover .refresh-circle {
+    background-color: #216583;
+}
+
+.refresh-button-container:hover .refresh-text {
+    display: inline-block; 
+}
+
+
 @media (max-width: 768px) {
     #container {
         flex-direction: column; 
